letterspacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -464,7 +464,7 @@ circle.largeNode + text {
   .groupFilters > .filterItem {
     padding-bottom: 2px;
     padding-top: 8px;
-    letter-spacing: 10px;
+    /* letter-spacing: 10px; */
   }
 
   .sectorFilter.active,
